tests/failing/test_failing.t
Run tests with assertion failures in concolic:
  $ wasp concolic test1.wast
